--- a/client/package.json
+++ b/client/package.json
@@ -6,26 +6,10 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "lint:js": "eslint --ext \".ts,.vue\" --ignore-path .gitignore .",
-    "lint:prettier": "prettier --check .",
-    "lint": "yarn lint:js && yarn lint:prettier",
-    "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
+    "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@types/node": "^18",
-    "@typescript-eslint/parser": "^5.59.8",
-    "eslint": "^8.41.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "nuxt": "^3.5.2",
-    "prettier": "^2.8.8",
-    "sass": "^1.62.1",
-    "sass-loader": "^13.3.1",
-    "typescript": "^5.0.4"
-  },
-  "dependencies": {
-    "bootstrap": "^5.3.0"
+    "nuxt": "^3.5.2"
   }
 }
