--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@types/node": "^18",
     "@typescript-eslint/parser": "^5.59.8",
     "eslint": "^8.41.0",
@@ -26,6 +27,9 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "bootstrap": "^5.3.0"
+    "@pinia/nuxt": "^0.4.11",
+    "bootstrap": "^5.3.0",
+    "pinia": "^2.1.3",
+    "pinia-plugin-persistedstate": "^3.1.0"
   }
 }
