--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "@pinia/nuxt": "^0.4.11",
     "bootstrap": "^5.3.0",
     "pinia": "^2.1.3",
-    "pinia-plugin-persistedstate": "^3.1.0"
+    "pinia-plugin-persistedstate": "^3.1.0",
+    "vuejs-paginate-next": "^1.0.2"
   }
 }
